<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	android:padding="24dp">

	<RadioGroup
		android:layout_width="match_parent"
		android:layout_height="wrap_content">

		<RadioButton
			android:id="@+id/nuovoparente_1"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/parent"
			android:textSize="16sp"/>

		<RadioButton
			android:id="@+id/nuovoparente_2"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/sibling"
			android:textSize="16sp"/>

		<RadioButton
			android:id="@+id/nuovoparente_3"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/spouse"
			android:textSize="16sp"/>

		<RadioButton
			android:id="@+id/nuovoparente_4"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/child"
			android:textSize="16sp"/>
	</RadioGroup>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="8dp"
		android:orientation="vertical">

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/into"
			android:textSize="16sp"/>

		<Spinner
			android:id="@+id/nuovoparente_famiglie"
			android:layout_width="match_parent"
			android:layout_height="wrap_content" />
	</LinearLayout>
</LinearLayout>