<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="30dp">

    <Button
        android:id="@+id/new_download_shared"
        style="@style/AppTheme.ColoredButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:minWidth="350dp"
        android:text="@string/download_shared_tree" />

    <Button
        android:id="@+id/new_empty_tree"
        style="@style/AppTheme.ColoredButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:minWidth="350dp"
        android:text="@string/empty_tree" />

    <Button
        android:id="@+id/new_download_example"
        style="@style/AppTheme.NormalButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:minWidth="350dp"
        android:text="@string/download_example" />

    <Button
        android:id="@+id/new_recover_backup"
        style="@style/AppTheme.NormalButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:minWidth="350dp"
        android:text="@string/import_backup" />

    <Button
        android:id="@+id/new_import_gedcom"
        style="@style/AppTheme.NormalButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="350dp"
        android:text="@string/import_gedcom" />
</LinearLayout>
