<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp">

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/newRelative_parent"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="@string/parent"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/newRelative_sibling"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="@string/sibling"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/newRelative_partner"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="@string/partner"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/newRelative_child"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="@string/child"
                android:textSize="18sp" />
        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/into" />

            <Spinner
                android:id="@+id/newRelative_families"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
