<?xml version="1.0" encoding="utf-8"?>
<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:fillViewport="true">
	<RelativeLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content">
		<LinearLayout
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_centerHorizontal="true"
			android:layout_centerVertical="true"
			android:orientation="vertical"
			android:padding="30dp">
			<Button
				android:id="@+id/new_download_shared"
				style="@style/AppTheme.BottoneColorato"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginBottom="16dp"
				android:minWidth="350dp"
				android:text="@string/download_shared_tree"/>
			<Button
				android:id="@+id/new_empty_tree"
				style="@style/AppTheme.BottoneColorato"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginBottom="16dp"
				android:minWidth="350dp"
				android:text="@string/empty_tree"/>
			<Button
				android:id="@+id/new_download_example"
				style="@style/AppTheme.BottoneNormale"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginBottom="16dp"
				android:minWidth="350dp"
				android:text="@string/download_example"/>
			<Button
				android:id="@+id/new_import_gedcom"
				style="@style/AppTheme.BottoneNormale"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginBottom="16dp"
				android:minWidth="350dp"
				android:text="@string/import_gedcom"/>
			<Button
				android:id="@+id/new_recover_backup"
				style="@style/AppTheme.BottoneNormale"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:minWidth="350dp"
				android:text="@string/import_backup"/>
		</LinearLayout>
		<ProgressBar
			android:id="@+id/new_progress"
			android:layout_width="70dp"
			android:layout_height="70dp"
			android:layout_centerHorizontal="true"
			android:layout_centerVertical="true"
			android:visibility="gone"/>
	</RelativeLayout>
</ScrollView>
