<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingStart="15dp"
    android:paddingTop="30dp"
    android:paddingEnd="15dp"
    android:paddingBottom="50dp">

    <include
        android:id="@+id/merge_firstTree"
        layout="@layout/tree_view" />

    <include
        android:id="@+id/merge_secondTree"
        layout="@layout/tree_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="30dp" />

    <TextView
        style="@style/AppTheme.Suggestion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:text="@string/choose_output" />

    <RadioGroup
        android:id="@+id/merge_radiogroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/merge_radio_annex"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp" />

        <RadioButton
            android:id="@+id/merge_radio_generate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/generate_new" />
    </RadioGroup>

    <EditText
        android:id="@+id/merge_retitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name_of_tree"
        android:inputType="textCapWords"
        android:maxLines="1"
        android:visibility="gone" />

    <Button
        android:id="@+id/merge_button"
        style="@style/AppTheme.ColoredButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:enabled="false"
        android:text="@string/merge" />
</LinearLayout>
